# blacksquare

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-and-deploy.yaml  build-and-test.yaml  built-and-test.yaml
blacksquare/: __init__.py  cell.py  crossword.py  dictionary.py  symmetry.py  test.puz  types.py  utils.py  word.py  word_list.py
docs/: blacksquare.rst  conf.py  index.rst
docs/_build/doctrees/: blacksquare.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree  tests.doctree
docs/_build/html/: .buildinfo  blacksquare.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/_build/html/_sources/: blacksquare.rst.txt  modules.rst.txt  tests.rst.txt
src/blacksquare/: __init__.py  cell.py  crossword.py  html.py  spreadthewordlist.npz  symmetry.py  types.py  utils.py  word.py  word_list.py
tests/: conftest.py  dummy.puz  test_blacksquare.py  test_cell.py  test_crossword.py  test_dictionary.py  test_symmetry.py  test_word.py  test_word_list.py
