[metadata]
name = blacksquare
version = 0.2.0
author = Patrick Maher
author_email = pmaher86@gmail.com
description = "A package for creating crossword puzzles"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pmaher86/blacksquare
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    pandas
    numpy
    tqdm
    puzpy
    pdfkit
    pypdf2


[options.extras_require]
test = 
    pip-tools
    pytest
    black